force-app/main/default/objects/Car__c/fields/Car_Rental_Garage__c.field-meta.xml
<CustomField>
    <fullName>Car_Rental_Garage__c</fullName>
    <label>Car Rental Garage</label>
    <referenceTo>Car_Rental_Garage__c</referenceTo>
    <relationshipLabel>Cars</relationshipLabel>
    <relationshipName>Cars</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>