force-app/main/default/objects/Car__c/fields/Date_Of_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Purchase__c</fullName>
    <label>Date Of Purchase</label>
    <type>Date</type>
</CustomField>