force-app/main/default/objects/Car__c/fields/isLuxury__c.field-meta.xml
<CustomField>
    <fullName>isLuxury__c</fullName>
    <description>If the price of the car is more than 100 thousand, then it is considered premium.</description>
    <formula>Price__c &gt; 100000000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isLuxury</label>
    <type>Checkbox</type>
</CustomField>