force-app/main/default/objects/Car__c/fields/isVeryPowerful__c.field-meta.xml
<CustomField>
    <fullName>isVeryPowerful__c</fullName>
    <formula>Horse_Power__c &gt; 450</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isVeryPowerful</label>
    <type>Checkbox</type>
</CustomField>