force-app/main/default/objects/Car__c/validationRules/Horse_Power_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Horse_Power_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Horse_Power__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Horse_Power__c</errorDisplayField>
    <errorMessage>Horse power cannot be less than 0.</errorMessage>
</ValidationRule>