force-app/main/default/objects/Car__c/validationRules/Price_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Price_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Price__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Price__c</errorDisplayField>
    <errorMessage>Price of the car cannot be less than 0.</errorMessage>
</ValidationRule>